--- a/games/monkeyn/assets/01.yaml
+++ b/games/monkeyn/assets/01.yaml
@@ -488,6 +488,38 @@ seagull:
         - quads: [49,224,12,17,248, 10]
           ticks: 5
 
+    leave:
+      frames:
+        - quads: [3,339,15,13,245,10]
+          ticks: 10
+        - quads: [52,244,7,13,245,10]
+          ticks: 10
+        - quads: [46,259,15,13,245,10]
+          ticks: 10
+        - quads: [48,274,7,13,245,10]
+          ticks: 10
+        - quads: [46,259,15,13,245,10]
+          ticks: 10
+        - quads: [52,244,7,13,245,10]
+          ticks: 10
+        - quads: [47, 301, 19, 19, 247,15]
+          ticks: 10
+        - quads: [47, 301, 19, 19, 257,20]
+          ticks: 10
+        - quads: [47, 301, 19, 19, 267,25]
+          ticks: 10
+        - quads: [47, 301, 19, 19, 277,30]
+          ticks: 10
+        - quads: [47, 301, 19, 19, 287,35]
+          ticks: 10
+        - quads: [47, 301, 19, 19, 297,40]
+          ticks: 10
+        - quads: [47, 301, 19, 19, 307,45]
+          ticks: 10
+        - quads: [47, 301, 19, 19, 317,50]
+          ticks: 10
+        - quads: [47, 301, 19, 19, 327,55]
+          ticks: 10
     jump1:
       frames:
         - quads: [3,339,15,13,245,40]
