--- a/games/monkeyn/assets/01.yaml
+++ b/games/monkeyn/assets/01.yaml
@@ -599,7 +599,17 @@ scummbar.mancomb:
     idle_2:
       frames:
         - quads: [277,68,36,39,-1,1]
-          ticks: 2
+          ticks: 8
+mancomb:
+  sheet: 'gfx/faces.png'
+  type: 'model.sprite'
+  animations:
+    idle:
+      frames:
+        - quads: [80, 0, 78, 78]
+    smile:
+      frames:
+        - quads: [0, 0, 78, 78]
 scummbar.estevan:
   sheet: 'gfx/sprites/sprites1.png'
   type: 'model.sprite'
@@ -611,8 +621,11 @@ scummbar.estevan:
       loop: false
       frames:
         - quads: [355,76,39,27]
+          ticks: 5
         - quads: [396,76,37,27]
+          ticks: 5
         - quads: [355,76,39,27]
+          ticks: 5
 scummbar.loom:
   sheet: 'gfx/sprites/sprites1.png'
   type: 'model.sprite'
