--- a/games/monkeyn/dialogues/mancomb.yaml
+++ b/games/monkeyn/dialogues/mancomb.yaml
@@ -13,139 +13,102 @@ mancomb:
     name:
       lines: [15, 16, 17, 18]
     b:
-      lines: []
+      lines: [19,20,21,22]
   lines:
     0:
       text: imguy
       next: name
-      scr:
-        - [sayn, player, imguy]
-        - [sayn, mancomb, 9, 10, 11]
+      script: mancomb_0
     1:
       text: 'rupirate'
       activate: [8]
       deactivate: [2]
       next: root
-      scr:
-        - [0, 0, sayn, player, rupirate]
-        - [1, 0, sayn, mancomb, 29, 30, 24, 25, 26]
+      script: mancomb_1
     2:
       text: 'charge'
       next: a
       activate: [8]
       deactivate: [1]
-      scr:
-        - [0, 0, sayn, player, charge]
-        - [1, 0, sayn, mancomb, 40, 41]
+      script: mancomb_2
     3:
       text: 'bye'
       persist: True
-      scr:
-        - [0, 0, sayn, player, bye]
-        - [1, 0, sayn, mancomb, bye, 7]
+      script: mancomb_3
     4:
       text: 'yourname2'
       active: False
+      script: mancomb_4
+      args: [yourname2]
+      next: b
     5:
       text: leaders
       next: root
-      scr:
-        - [0, 0, sayn, player, leaders]
-        - [1, 0, sayn, mancomb, 24, 25, 26]
+      script: mancomb_5
+
     6:
       text: guvnor2
       next: marley
-      scr:
-        - [0, 0, sayn, player, leaders]
-        - [1, 0, sayn, mancomb, 31, 32, 33]
+      script:  mancomb_6
     7:
       text: nice
       persist: True
-      scr:
-        - [0, 0, sayn, player, nice]
-        - [1, 0, sayn, mancomb, bye, 7]
+      script: mancomb_7
     8:
       text: guvnor
       active: False
       next: marley
-      scr:
-        - [0, 0, sayn, player, guvnor]
-        - [1, 0, sayn, mancomb, 31, 32, 33]
+      script: mancomb_8
     9:
       text: whynot
       next: marley_2
-      scr:
-        - [0, 0, sayn, player, whynot]
-        - [1, 0, sayn, mancomb, 52, 53]
+      script: mancomb_9
     10:
       text: welcome
       next: root
-      scr:
-        - [0, 0, sayn, player, welcome]
-        - [1, 0, sayn, mancomb, 64, 65]
+      script: mancomb_10
     11:
       text: gothere
-      scr:
-        - [0, 0, sayn, player, welcome]
-        - [1, 0, sayn, mancomb, 37, bye, 7]
+      script: mancomb_11
     12:
       text: howsthat
       next: root
-      scr:
-        - [0, 0, sayn, player, howsthat]
-        - [1, 0, sayn, mancomb, 59, 60, 61, 62, 63]
+      script: mancomb_12
     13:
       text: whois
       next: root
-      scr:
-        - [0, 0, sayn, player, whois]
-        - [1, 0, sayn, mancomb, 58, 59, 60, 61, 62, 63]
+      script: mancomb_13
     14:
       text: toobad
-      scr:
-        - [0, 0, sayn, player, toobad]
-        - [1, 0, sayn, mancomb, bye, 7]
+      script: mancomb_14
     15:
       text: ilikeguy
       next: name
-      scr:
-        - [0, 0, sayn, player, ilikeguy]
-        - [1, 0, sayn, mancomb, 16]
+      script: mancomb_15
     16:
       text: yourname
       next: b
-      scr:
-        - [0, 0, sayn, player, yourname]
-        - [1, 0, sayn, mancomb, 17, 18]
+      script: mancomb_4
+      args: [yourname]
     17:
       text: dumb
       next: b
-      scr:
-        - [0, 0, sayn, player, dumb]
-        - [1, 0, sayn, mancomb, 45, 46, 18]
+      script: mancomb_17
     18:
       text: insulted
     19:
       text: 19
       next: root
-      scr:
-        - [0, 0, sayn, player, 19]
-        - [1, 0, sayn, mancomb, 23, 24, 25, 26]
+      script: mancomb_19
     20:
       text: 20
       next: root
-      scr:
-        - [0, 0, sayn, player, 20]
-        - [1, 0, sayn, mancomb, 28, 24, 25, 26]
+      script: mancomb_20
     21:
       text: 21
       next: root
-      scr:
-        - [0, 0, sayn, player, 21]
-        - [1, 0, sayn, mancomb, 50, 51, 24, 25, 26]
+      script: mancomb_21
     22:
       text: 22
-      scr:
-        - [0, 0, sayn, player, 22]
-        - [1, 0, sayn, mancomb, 47, 48]
+      script: mancomb_22
 
