--- a/games/monkeyn/main.yaml
+++ b/games/monkeyn/main.yaml
@@ -4,7 +4,7 @@
   lang: eng
   device_size: [320, 200]
   window_size: [640, 400]
-  start_room: kitchen
+  start_room: scummbar
   shaders:
     - color
     - unlit_textured
