--- a/games/monkeyn/rooms/scummbar.yaml
+++ b/games/monkeyn/rooms/scummbar.yaml
@@ -3,8 +3,10 @@
   type: scumm.room
   width: 640
   height: 144
-  on_load:
-    func: '@scripts.init_scummbar'
+  #on_load:
+  #  func: '@scripts.init_scummbar'
+  scripts:
+    - cook_init
   items:
     - type: scumm.bg
       image: gfx/scummbar_1.png
