--- a/games/kq1n/text/eng/text.yaml
+++ b/games/kq1n/text/eng/text.yaml
@@ -2,4 +2,4 @@ msg:
   1: "This deep swampy moat is patrolled by vicious\nserpents."
   2: "You are standing outside King Edward's castle,\nwhich is surrounded by a serpent-filled moat."
   3: "The portcullis is the only entrance to the King's\ncastle."
-  4: "These beautifil urns adorn the front of the\ncastle."
+  4: "These beautiful urns adorn the front of the\ncastle."
