refactoring: monkey is now an exec

--- a/games/kq1n/text/eng/text.yaml
+++ b/games/kq1n/text/eng/text.yaml
@@ -3,3 +3,4 @@ msg:
   2: "You are standing outside King Edward's castle,\nwhich is surrounded by a serpent-filled moat."
   3: "The portcullis is the only entrance to the King's\ncastle."
   4: "These beautiful urns adorn the front of the\ncastle."
+  5: "There's not much to do there."
