--- a/src/monkey/CMakeLists.txt
+++ b/src/monkey/CMakeLists.txt
@@ -1,12 +1,13 @@
 cmake_minimum_required(VERSION 3.3)
 
-#file(GLOB MONKEY_INCLUDE ${INCLUDE_DIR}/gfx/*.h ${INCLUDE_DIR}/gfx/lua/*.h ${INCLUDE_DIR}/gfx/components/*.h ${INCLUDE_DIR}/gfx/model/*.h
-#        ${INCLUDE_DIR}/gfx/factories/*.h
-#        ${INCLUDE_DIR}/gfx/activities/*.h ${INCLUDE_DIR}/gfx/math/*.h ${INCLUDE_DIR}/gfx/factories/*.h
-#        ${INCLUDE_DIR}/gfx/entities/*.h ${INCLUDE_DIR}/gfx/states/*.h ${INCLUDE_DIR}/gfx/shader/*.h)
 file(GLOB MONKEY_SOURCE *.cpp python/*.cpp components/*.cpp activities/*.cpp math/*.cpp factories/*.cpp input/*.cpp
 		math/shapes/*.cpp math/algo/*.cpp math/shapes3d/*.cpp math/algo3d/*.cpp mesh/*.cpp factories/*.cpp entities/*.cpp
 		states/*.cpp assets/*.cpp model/*.cpp shader/*.cpp skeletal/*.cpp skeletal/animation/*.cpp)
+
+if (DEFINED USE_BULLET)
+	set (MONKEY_SOURCE ${MONKEY_SOURCE} bullet/world.cpp)
+
+endif(DEFINED USE_BULLET)
 
 #set(CMAKE_ENABLE_EXPORTS ON)
 add_compile_options(-fvisibility=hidden)
@@ -19,26 +20,29 @@ if(DEFINED USE_ASSIMP)
 	#find_package(ASSIMP REQUIRED)
 endif(DEFINED USE_ASSIMP)
 
-add_library(monkey SHARED ${MONKEY_SOURCE})
+if(DEFINED USE_BULLET)
+	add_definitions(-DUSE_BULLET)
+endif(DEFINED USE_BULLET)
 
+add_executable(monkey ${MONKEY_SOURCE})
+set_target_properties(monkey PROPERTIES ENABLE_EXPORTS ON)
 
-message(${PYBIND_INCLUDE_DIR})
-message("FILODEPUTA")
 include_directories(${INCLUDE_DIR} ${PYBIND_INCLUDE_DIR} ${Python3_INCLUDE_DIRS} ${FREETYPE_INCLUDE_DIRS}
-		${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${YAML_INCLUDE_DIRS} ${ASSIMP_INCLUDE_DIRS} ${BOX2D_INCLUDE_DIRS})
+		${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${YAML_INCLUDE_DIRS} ${ASSIMP_INCLUDE_DIRS} ${BOX2D_INCLUDE_DIRS} ${BULLET_INCLUDE_DIRS})
 
 target_link_libraries(monkey
     ${OPENGL_LIBRARIES} ${Python3_LIBRARIES} glfw
     GLEW::GLEW ${FREETYPE_LIBRARIES} ${YAML_CPP_LIBRARIES}
-    ${PNG_LIBRARY} ${JPEG_LIBRARIES} ${CMAKE_DL_LIBS} ${ASSIMP_LIBRARIES} alglib box2d)
+    ${PNG_LIBRARY} ${JPEG_LIBRARIES} ${CMAKE_DL_LIBS} ${ASSIMP_LIBRARIES} alglib box2d ${BULLET_LIBRARIES})
 
 
-#add_custom_command(
-#		TARGET monkey POST_BUILD
-#		COMMAND ${CMAKE_COMMAND} -E copy
-#				${CMAKE_SOURCE_DIR}/src/config.json
-#				${BIN_DIR}/config.json)
+
+add_custom_command(
+		TARGET monkey POST_BUILD
+		COMMAND ${CMAKE_COMMAND} -E copy_directory
+				${CMAKE_SOURCE_DIR}/glsl
+				${CMAKE_CURRENT_BINARY_DIR}/glsl)
 
 
 #install(TARGETS monkey DESTINATION ${LIB_DIR})
-install(TARGETS monkey DESTINATION lib)
+#install(TARGETS monkey DESTINATION lib)
