--- a/src/prova/CMakeLists.txt
+++ b/src/prova/CMakeLists.txt
@@ -14,27 +14,27 @@ pybind11_add_module(example example.cpp rect.cpp funx.cpp)
 #        "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/setup.py"
 #)
 
-configure_file(
-    "${SRC_DIR}/prova/install.sh"
-    "${BIN_DIR}/install.sh"
-)
-configure_file(
-    "${SRC_DIR}/prova/setup.py.in"
-    "${BIN_DIR}/setup.py"
-)
+#configure_file(
+#    "${SRC_DIR}/prova/install.sh"
+#    "${BIN_DIR}/install.sh"
+#)
+#configure_file(
+#    "${SRC_DIR}/prova/setup.py.in"
+#    "${BIN_DIR}/setup.py"
+#)
 
 target_link_libraries(example PUBLIC monkey)
 
-add_custom_command(
-    TARGET example
-    POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy
-    "${SRC_DIR}/prova/setup.py.in"
-    "${BIN_DIR}/setup.py"
-)
+#add_custom_command(
+#    TARGET example
+#    POST_BUILD
+#    COMMAND ${CMAKE_COMMAND} -E copy
+#    "${SRC_DIR}/prova/setup.py.in"
+#    "${BIN_DIR}/setup.py"
+#)
 
-install(TARGETS example DESTINATION ${BIN_DIR})
+#install(TARGETS example DESTINATION ${BIN_DIR})
 
-install(CODE "execute_process(COMMAND ${BIN_DIR}/install.sh)")
+#install(CODE "execute_process(COMMAND ${BIN_DIR}/install.sh)")
 
 #INSTALL(CODE "execute_process(COMMAND ${BIN_DIR}/install.sh)")
